--- a/package.json
+++ b/package.json
@@ -4,5 +4,22 @@
   },
   "devDependencies": {
     "parcel": "^2.8.3"
-  }
+  },
+  "name": "crafts-promos",
+  "description": "Plz work",
+  "version": "1.0.0",
+  "main": "main.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/MDeanLindsay/Crafts-Promos.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/MDeanLindsay/Crafts-Promos/issues"
+  },
+  "homepage": "https://github.com/MDeanLindsay/Crafts-Promos#readme"
 }
