--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "version": "1.0.0",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node_modules/next/dist/bin/next start -p $PORT"
   },
   "repository": {
     "type": "git",
@@ -20,6 +21,5 @@
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/MDeanLindsay/Crafts-Promos/issues"
-  },
-  "homepage": "https://github.com/MDeanLindsay/Crafts-Promos#readme"
+  }
 }
