--- a/package.json
+++ b/package.json
@@ -8,11 +8,7 @@
   "name": "crafts-promos",
   "description": "Plz work",
   "version": "1.0.0",
-  "main": "main.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node_modules/next/dist/bin/next start -p $PORT"
-  },
+  "main": "index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/MDeanLindsay/Crafts-Promos.git"
