--- a/package.json
+++ b/package.json
@@ -1,14 +1,11 @@
 {
   "dependencies": {
+    "parcel": "^2.8.3",
     "startbootstrap-sb-admin-2": "^3.3.7"
-  },
-  "devDependencies": {
-    "parcel": "^2.8.3"
   },
   "name": "crafts-promos",
   "description": "Plz work",
   "version": "1.0.0",
-  "main": "index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/MDeanLindsay/Crafts-Promos.git"
