--- a/package.json
+++ b/package.json
@@ -1,11 +1,115 @@
 {
-  "dependencies": {
-    "parcel": "^2.8.3",
-    "startbootstrap-sb-admin-2": "^3.3.7"
-  },
   "name": "crafts-promos",
-  "description": "Plz work",
   "version": "1.0.0",
+  "description": "Plz work",
+  "main": "index.js",
+  "dependencies": {
+    "ansi-styles": "^4.3.0",
+    "base-x": "^3.0.9",
+    "abortcontroller-polyfill": "^1.7.5",
+    "braces": "^3.0.2",
+    "boolbase": "^1.0.0",
+    "acorn": "^8.8.2",
+    "argparse": "^2.0.1",
+    "browserslist": "^4.21.5",
+    "chalk": "^4.1.2",
+    "buffer-from": "^1.1.2",
+    "callsites": "^3.1.0",
+    "caniuse-lite": "^1.0.30001489",
+    "commander": "^7.2.0",
+    "color-convert": "^2.0.1",
+    "clone": "^2.1.2",
+    "color-name": "^1.1.4",
+    "chrome-trace-event": "^1.0.3",
+    "css-select": "^5.1.0",
+    "cosmiconfig": "^8.1.3",
+    "detect-libc": "^1.0.3",
+    "css-what": "^6.1.0",
+    "csso": "^5.0.5",
+    "dom-serializer": "^1.4.1",
+    "domelementtype": "^2.3.0",
+    "css-tree": "^2.3.1",
+    "domhandler": "^4.3.1",
+    "dotenv-expand": "^5.1.0",
+    "domutils": "^2.8.0",
+    "error-ex": "^1.3.2",
+    "entities": "^3.0.1",
+    "electron-to-chromium": "^1.4.403",
+    "escape-string-regexp": "^1.0.5",
+    "fill-range": "^7.0.1",
+    "dotenv": "^7.0.0",
+    "escalade": "^3.1.1",
+    "has-flag": "^4.0.0",
+    "globals": "^13.20.0",
+    "htmlnano": "^2.0.4",
+    "get-port": "^4.2.0",
+    "is-extglob": "^2.1.1",
+    "is-arrayish": "^0.2.1",
+    "is-glob": "^4.0.3",
+    "is-number": "^7.0.0",
+    "is-json": "^2.0.1",
+    "json5": "^2.2.3",
+    "js-tokens": "^4.0.0",
+    "import-fresh": "^3.3.0",
+    "json-parse-even-better-errors": "^2.3.1",
+    "lightningcss-darwin-arm64": "^1.20.0",
+    "lmdb": "^2.5.2",
+    "js-yaml": "^4.1.0",
+    "htmlparser2": "^7.2.0",
+    "lines-and-columns": "^1.2.4",
+    "lightningcss": "^1.20.0",
+    "msgpackr": "^1.9.2",
+    "micromatch": "^4.0.5",
+    "msgpackr-extract": "^3.0.2",
+    "node-gyp-build": "^4.6.0",
+    "node-gyp-build-optional-packages": "^5.0.3",
+    "mdn-data": "^2.0.30",
+    "parcel": "^2.8.3",
+    "ordered-binary": "^1.4.0",
+    "parent-module": "^1.0.1",
+    "node-addon-api": "^3.2.1",
+    "nth-check": "^2.1.1",
+    "picomatch": "^2.3.1",
+    "node-releases": "^2.0.11",
+    "nullthrows": "^1.1.1",
+    "parse-json": "^5.2.0",
+    "posthtml-render": "^3.0.0",
+    "picocolors": "^1.0.0",
+    "posthtml-parser": "^0.10.2",
+    "posthtml": "^0.16.6",
+    "resolve-from": "^4.0.0",
+    "react-refresh": "^0.9.0",
+    "react-error-overlay": "^6.0.9",
+    "semver": "^5.7.1",
+    "safe-buffer": "^5.2.1",
+    "regenerator-runtime": "^0.13.11",
+    "source-map": "^0.6.1",
+    "stable": "^0.1.8",
+    "source-map-support": "^0.5.21",
+    "srcset": "^4.0.0",
+    "startbootstrap-sb-admin-2": "^3.3.7+1",
+    "source-map-js": "^1.0.2",
+    "postcss-value-parser": "^4.2.0",
+    "path-type": "^4.0.0",
+    "supports-color": "^7.2.0",
+    "term-size": "^2.2.1",
+    "to-regex-range": "^5.0.1",
+    "timsort": "^0.3.0",
+    "terser": "^5.17.5",
+    "type-fest": "^0.20.2",
+    "v8-compile-cache": "^2.3.0",
+    "tslib": "^2.5.2",
+    "weak-lru-cache": "^1.2.2",
+    "svgo": "^3.0.2",
+    "utility-types": "^3.10.0",
+    "update-browserslist-db": "^1.0.11",
+    "xxhash-wasm": "^0.4.2"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "parcel index.html --public-url /"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/MDeanLindsay/Crafts-Promos.git"
@@ -14,5 +118,6 @@
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/MDeanLindsay/Crafts-Promos/issues"
-  }
+  },
+  "homepage": "https://github.com/MDeanLindsay/Crafts-Promos#readme"
 }
