--- a/package.json
+++ b/package.json
@@ -3,112 +3,112 @@
   "version": "1.0.0",
   "description": "Plz work",
   "dependencies": {
-    "ansi-styles": "^4.3.0",
-    "base-x": "^3.0.9",
+    "@fortawesome/fontawesome-free": "5.15.3",
     "abortcontroller-polyfill": "^1.7.5",
-    "braces": "^3.0.2",
-    "boolbase": "^1.0.0",
     "acorn": "^8.8.2",
+    "ansi-styles": "^4.3.0",
     "argparse": "^2.0.1",
+    "base-x": "^3.0.9",
+    "boolbase": "^1.0.0",
+    "bootstrap": "4.6.0",
+    "braces": "^3.0.2",
     "browserslist": "^4.21.5",
-    "chalk": "^4.1.2",
     "buffer-from": "^1.1.2",
     "callsites": "^3.1.0",
     "caniuse-lite": "^1.0.30001489",
-    "commander": "^7.2.0",
-    "color-convert": "^2.0.1",
-    "clone": "^2.1.2",
-    "color-name": "^1.1.4",
+    "chalk": "^4.1.2",
     "chrome-trace-event": "^1.0.3",
-    "css-select": "^5.1.0",
+    "clone": "^2.1.2",
+    "color-convert": "^2.0.1",
+    "color-name": "^1.1.4",
+    "commander": "^7.2.0",
     "cosmiconfig": "^8.1.3",
-    "detect-libc": "^1.0.3",
+    "css-select": "^5.1.0",
+    "css-tree": "^2.3.1",
     "css-what": "^6.1.0",
     "csso": "^5.0.5",
+    "csv-parse": "^5.3.10",
+    "datatables.net-bs4": "1.10.24",
+    "detect-libc": "^1.0.3",
     "dom-serializer": "^1.4.1",
     "domelementtype": "^2.3.0",
-    "css-tree": "^2.3.1",
     "domhandler": "^4.3.1",
-    "dotenv-expand": "^5.1.0",
     "domutils": "^2.8.0",
-    "error-ex": "^1.3.2",
-    "entities": "^3.0.1",
+    "dotenv": "^7.0.0",
+    "dotenv-expand": "^5.1.0",
     "electron-to-chromium": "^1.4.403",
+    "entities": "^3.0.1",
+    "error-ex": "^1.3.2",
+    "escalade": "^3.1.1",
     "escape-string-regexp": "^1.0.5",
     "fill-range": "^7.0.1",
-    "dotenv": "^7.0.0",
-    "escalade": "^3.1.1",
-    "has-flag": "^4.0.0",
-    "globals": "^13.20.0",
-    "htmlnano": "^2.0.4",
     "get-port": "^4.2.0",
-    "is-extglob": "^2.1.1",
-    "is-arrayish": "^0.2.1",
-    "is-glob": "^4.0.3",
-    "is-number": "^7.0.0",
-    "is-json": "^2.0.1",
-    "json5": "^2.2.3",
-    "js-tokens": "^4.0.0",
-    "import-fresh": "^3.3.0",
-    "json-parse-even-better-errors": "^2.3.1",
-    "lmdb": "^2.5.2",
-    "js-yaml": "^4.1.0",
+    "globals": "^13.20.0",
+    "has-flag": "^4.0.0",
+    "htmlnano": "^2.0.4",
     "htmlparser2": "^7.2.0",
-    "lines-and-columns": "^1.2.4",
+    "import-fresh": "^3.3.0",
+    "is-arrayish": "^0.2.1",
+    "is-extglob": "^2.1.1",
+    "is-glob": "^4.0.3",
+    "is-json": "^2.0.1",
+    "is-number": "^7.0.0",
+    "jquery": "3.6.0",
+    "jquery.easing": "^1.4.1",
+    "js-tokens": "^4.0.0",
+    "js-yaml": "^4.1.0",
+    "json-parse-even-better-errors": "^2.3.1",
+    "json5": "^2.2.3",
     "lightningcss": "^1.20.0",
-    "msgpackr": "^1.9.2",
+    "lines-and-columns": "^1.2.4",
+    "lmdb": "^2.5.2",
+    "mdn-data": "^2.0.30",
     "micromatch": "^4.0.5",
+    "msgpackr": "^1.9.2",
     "msgpackr-extract": "^3.0.2",
+    "node-addon-api": "^3.2.1",
     "node-gyp-build": "^4.6.0",
     "node-gyp-build-optional-packages": "^5.0.3",
-    "mdn-data": "^2.0.30",
-    "parcel": "^2.8.3",
-    "ordered-binary": "^1.4.0",
-    "parent-module": "^1.0.1",
-    "node-addon-api": "^3.2.1",
-    "nth-check": "^2.1.1",
-    "picomatch": "^2.3.1",
     "node-releases": "^2.0.11",
+    "nth-check": "^2.1.1",
     "nullthrows": "^1.1.1",
+    "ordered-binary": "^1.4.0",
+    "parcel": "^2.8.3",
+    "parent-module": "^1.0.1",
     "parse-json": "^5.2.0",
-    "posthtml-render": "^3.0.0",
+    "path-type": "^4.0.0",
     "picocolors": "^1.0.0",
-    "posthtml-parser": "^0.10.2",
+    "picomatch": "^2.3.1",
+    "postcss-value-parser": "^4.2.0",
     "posthtml": "^0.16.6",
-    "resolve-from": "^4.0.0",
-    "react-refresh": "^0.9.0",
+    "posthtml-parser": "^0.10.2",
+    "posthtml-render": "^3.0.0",
     "react-error-overlay": "^6.0.9",
-    "semver": "^5.7.1",
-    "safe-buffer": "^5.2.1",
+    "react-refresh": "^0.9.0",
     "regenerator-runtime": "^0.13.11",
+    "resolve-from": "^4.0.0",
+    "safe-buffer": "^5.2.1",
+    "semver": "^5.7.1",
     "source-map": "^0.6.1",
-    "stable": "^0.1.8",
+    "source-map-js": "^1.0.2",
     "source-map-support": "^0.5.21",
     "srcset": "^4.0.0",
+    "stable": "^0.1.8",
     "startbootstrap-sb-admin-2": "^3.3.7+1",
-    "source-map-js": "^1.0.2",
-    "postcss-value-parser": "^4.2.0",
-    "path-type": "^4.0.0",
     "supports-color": "^7.2.0",
-    "term-size": "^2.2.1",
-    "to-regex-range": "^5.0.1",
-    "timsort": "^0.3.0",
-    "terser": "^5.17.5",
-    "type-fest": "^0.20.2",
-    "v8-compile-cache": "^2.3.0",
-    "tslib": "^2.5.2",
-    "weak-lru-cache": "^1.2.2",
     "svgo": "^3.0.2",
-    "utility-types": "^3.10.0",
+    "term-size": "^2.2.1",
+    "terser": "^5.17.5",
+    "timsort": "^0.3.0",
+    "to-regex-range": "^5.0.1",
+    "tslib": "^2.5.2",
+    "type-fest": "^0.20.2",
     "update-browserslist-db": "^1.0.11",
-    "xxhash-wasm": "^0.4.2",
-    "@fortawesome/fontawesome-free": "5.15.3",
-    "bootstrap": "4.6.0",
-    "datatables.net-bs4": "1.10.24",
-    "jquery": "3.6.0",
-    "jquery.easing": "^1.4.1"
+    "utility-types": "^3.10.0",
+    "v8-compile-cache": "^2.3.0",
+    "weak-lru-cache": "^1.2.2",
+    "xxhash-wasm": "^0.4.2"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "parcel index.html --public-url /"
